feat(branch): add branch creation api and update bruno api testing
