# backend/internal/branch/models.go
@@ -11,3 +11,8 @@ type Branch struct {
 type UpdateCapacityRequest struct {
 	Capacity shared.Option[int] `json:"capacity" binding:"required" swaggertype:"integer" example:"30"`
 }
+
+type CreateBranchRequest struct {
+	Name     string             `json:"name"     binding:"required" example:"Siam"`
+	Capacity shared.Option[int] `json:"capacity" swaggertype:"integer" example:"30"`
+}
